tdf#70759 Clear formatting should set "Standard" text style

not "Text body"

Change-Id: I994682b156dd4d8d6301baf6ca077cd072412b25